--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 
 <body>
   <header>
+    <div class="container_header">
     <img src="logo_leo.jpg" alt="casa_do_leo_logo">
     <h1 class="titulo">Casa do Léo</h1>
+  </div>
     <ul>
       <li><a href="#">Quem somos</a></li>
       <li><a href="#">Campanhas</a></li>
       <li><a href="#">Login</a></li>
-      <li><a href="#">Cadastro</a></li>
+      <li><a class="cadastro" href="#">Cadastro</a></li>
     </ul>
   </header>
 
