--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
   <header>
     <div class="container_header">
-    <img src="logo_leo.jpg" alt="casa_do_leo_logo">
-    <h1 class="titulo">Casa do Léo</h1>
-  </div>
+      <img src="logo_leo.jpg" alt="casa_do_leo_logo">
+      <h1 class="titulo">Casa do Léo</h1>
+    </div>
     <ul>
       <li><a href="#">Quem somos</a></li>
       <li><a href="#">Campanhas</a></li>
@@ -22,8 +22,13 @@
     </ul>
   </header>
 
+  <div class="carrossel">
+    <img class="imgs_carrossel"  src="img1.jpg">
+    <img class="imgs_carrossel"  src="img2.jpg">
+    <img class="imgs_carrossel"  src="img3.jpg">
+  </div>
 
-
+<script src="script.js"></script>
 </body>
 
 </html>
